--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!-- Meme Fields -->
         <fieldset id="memeFields">
           <legend>Meme</legend>
-          
+
           <!-- Mode Selection Group -->
           <div class="form-group">
             <div class="form-group-title">Mode Selection</div>
@@ -368,101 +368,6 @@
             <input type="text" id="manualHashtags" placeholder="#ai #fun" />
           </label>
         </fieldset>
-
-        <!-- FIRST TIME SETUP WIZARD MODAL -->
-        <div id="setupWizardModal"
-          style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); z-index: 10000; overflow-y: auto;">
-          <div
-            style="background: var(--glass-bg); max-width: 900px; margin: 30px auto; padding: 40px; border-radius: 20px; position: relative; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);">
-            <button id="closeSetupWizard"
-              style="position: absolute; top: 20px; right: 20px; background: #e53e3e; color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold;">Skip</button>
-
-            <div style="text-align: center; margin-bottom: 40px;">
-              <h1 style="font-size: 36px; margin-bottom: 10px;">🎬 Welcome to AI Auto Bot!</h1>
-              <p style="font-size: 18px; color: #6b7280;">Your FREE social media automation tool</p>
-            </div>
-
-            <div
-              style="background: linear-gradient(135deg, rgba(74, 144, 226, 0.1) 0%, rgba(30, 60, 114, 0.1) 100%); padding: 25px; border-radius: 15px; margin-bottom: 30px; border-left: 4px solid #4a90e2;">
-              <h3 style="margin-bottom: 15px; color: #4a90e2;">✨ How It Works (BYOK Model)</h3>
-              <p style="line-height: 1.8; margin-bottom: 15px;">This app is <strong>100% FREE</strong>, but you need to
-                provide your own API keys:</p>
-              <ul style="line-height: 2; margin-left: 20px;">
-                <li>✅ <strong>You control your data</strong> - All keys are encrypted locally</li>
-                <li>✅ <strong>You control costs</strong> - Pay API providers directly (no middleman)</li>
-                <li>✅ <strong>No subscription</strong> - Use the app forever for free</li>
-                <li>✅ <strong>Privacy first</strong> - Your data never leaves your computer</li>
-              </ul>
-            </div>
-
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 30px;">
-              <div style="background: rgba(255, 255, 255, 0.05); padding: 20px; border-radius: 12px;">
-                <h4 style="margin-bottom: 12px; color: #4a90e2;">🤖 AI Generation</h4>
-                <p style="font-size: 14px; line-height: 1.6; margin-bottom: 10px;">Create images and videos with AI</p>
-                <div style="font-size: 12px; color: #9ca3af;">
-                  <div>OpenAI: <strong>~$0.04/image</strong></div>
-                  <div>Runway: <strong>~$0.25/sec video</strong></div>
-                </div>
-              </div>
-              <div style="background: rgba(255, 255, 255, 0.05); padding: 20px; border-radius: 12px;">
-                <h4 style="margin-bottom: 12px; color: #48bb78;">📤 Social Media</h4>
-                <p style="font-size: 14px; line-height: 1.6; margin-bottom: 10px;">Post to all platforms</p>
-                <div style="font-size: 12px; color: #9ca3af;">
-                  <div>Instagram/TikTok/YouTube: <strong>FREE</strong></div>
-                  <div>Twitter: <strong>FREE (1500/mo)</strong></div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              style="background: rgba(0, 0, 0, 0.3); padding: 25px; border-radius: 15px; margin-bottom: 30px; border: 1px solid rgba(255, 255, 255, 0.1);">
-              <h3 style="margin-bottom: 20px; color: var(--text-primary, #f9fafb);">🚀 Setup Checklist</h3>
-              <div style="display: grid; gap: 12px;">
-                <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
-                  <input type="checkbox" id="setupCheckOpenAI" style="width: 20px; height: 20px;">
-                  <label for="setupCheckOpenAI" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
-                    <strong>OpenAI API Key</strong> - For image generation
-                    <a href="https://platform.openai.com/api-keys" target="_blank"
-                      style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
-                  </label>
-                </div>
-                <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
-                  <input type="checkbox" id="setupCheckRunway" style="width: 20px; height: 20px;">
-                  <label for="setupCheckRunway" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
-                    <strong>Runway API Key</strong> - For video generation (optional)
-                    <a href="https://runwayml.com" target="_blank"
-                      style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
-                  </label>
-                </div>
-                <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
-                  <input type="checkbox" id="setupCheckSocial" style="width: 20px; height: 20px;">
-                  <label for="setupCheckSocial" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
-                    <strong>Social Media OAuth</strong> - Connect your accounts
-                    <span style="color: #9ca3af; font-size: 14px; margin-left: 10px;">(Setup after opening app)</span>
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <div style="display: flex; gap: 15px;">
-              <button id="openSettingsFromWizard"
-                style="flex: 1; padding: 15px; background: var(--blue-gradient); color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px;">
-                ⚙️ Open Settings & Add Keys
-              </button>
-              <button id="continueWithoutSetup"
-                style="flex: 1; padding: 15px; background: #6b7280; color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px;">
-                Skip for Now
-              </button>
-            </div>
-
-            <p style="text-align: center; margin-top: 20px; font-size: 12px; color: #9ca3af;">
-              💡 Tip: You can access this wizard anytime from Settings → "Show Setup Guide"
-            </p>
-          </div>
-        </div>
 
         <!-- BULK GENERATION MODAL -->
         <div id="bulkModal" style="
@@ -802,6 +707,101 @@ Top Text 2|Bottom Text 2"></textarea>
 
       </div>
       <!-- END SECTION: GENERATE -->
+
+      <!-- FIRST TIME SETUP WIZARD MODAL (Global - appears over all sections) -->
+      <div id="setupWizardModal"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); z-index: 10000; overflow-y: auto;">
+        <div
+          style="background: var(--glass-bg); max-width: 900px; margin: 30px auto; padding: 40px; border-radius: 20px; position: relative; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);">
+          <button id="closeSetupWizard"
+            style="position: absolute; top: 20px; right: 20px; background: #e53e3e; color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold;">Skip</button>
+
+          <div style="text-align: center; margin-bottom: 40px;">
+            <h1 style="font-size: 36px; margin-bottom: 10px;">🎬 Welcome to AI Auto Bot!</h1>
+            <p style="font-size: 18px; color: #6b7280;">Your FREE social media automation tool</p>
+          </div>
+
+          <div
+            style="background: linear-gradient(135deg, rgba(74, 144, 226, 0.1) 0%, rgba(30, 60, 114, 0.1) 100%); padding: 25px; border-radius: 15px; margin-bottom: 30px; border-left: 4px solid #4a90e2;">
+            <h3 style="margin-bottom: 15px; color: #4a90e2;">✨ How It Works (BYOK Model)</h3>
+            <p style="line-height: 1.8; margin-bottom: 15px;">This app is <strong>100% FREE</strong>, but you need to
+              provide your own API keys:</p>
+            <ul style="line-height: 2; margin-left: 20px;">
+              <li>✅ <strong>You control your data</strong> - All keys are encrypted locally</li>
+              <li>✅ <strong>You control costs</strong> - Pay API providers directly (no middleman)</li>
+              <li>✅ <strong>No subscription</strong> - Use the app forever for free</li>
+              <li>✅ <strong>Privacy first</strong> - Your data never leaves your computer</li>
+            </ul>
+          </div>
+
+          <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 30px;">
+            <div style="background: rgba(255, 255, 255, 0.05); padding: 20px; border-radius: 12px;">
+              <h4 style="margin-bottom: 12px; color: #4a90e2;">🤖 AI Generation</h4>
+              <p style="font-size: 14px; line-height: 1.6; margin-bottom: 10px;">Create images and videos with AI</p>
+              <div style="font-size: 12px; color: #9ca3af;">
+                <div>OpenAI: <strong>~$0.04/image</strong></div>
+                <div>Runway: <strong>~$0.25/sec video</strong></div>
+              </div>
+            </div>
+            <div style="background: rgba(255, 255, 255, 0.05); padding: 20px; border-radius: 12px;">
+              <h4 style="margin-bottom: 12px; color: #48bb78;">📤 Social Media</h4>
+              <p style="font-size: 14px; line-height: 1.6; margin-bottom: 10px;">Post to all platforms</p>
+              <div style="font-size: 12px; color: #9ca3af;">
+                <div>Instagram/TikTok/YouTube: <strong>FREE</strong></div>
+                <div>Twitter: <strong>FREE (1500/mo)</strong></div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            style="background: rgba(0, 0, 0, 0.3); padding: 25px; border-radius: 15px; margin-bottom: 30px; border: 1px solid rgba(255, 255, 255, 0.1);">
+            <h3 style="margin-bottom: 20px; color: var(--text-primary, #f9fafb);">🚀 Setup Checklist</h3>
+            <div style="display: grid; gap: 12px;">
+              <div
+                style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
+                <input type="checkbox" id="setupCheckOpenAI" style="width: 20px; height: 20px;">
+                <label for="setupCheckOpenAI" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
+                  <strong>OpenAI API Key</strong> - For image generation
+                  <a href="https://platform.openai.com/api-keys" target="_blank"
+                    style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
+                </label>
+              </div>
+              <div
+                style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
+                <input type="checkbox" id="setupCheckRunway" style="width: 20px; height: 20px;">
+                <label for="setupCheckRunway" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
+                  <strong>Runway API Key</strong> - For video generation (optional)
+                  <a href="https://runwayml.com" target="_blank"
+                    style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
+                </label>
+              </div>
+              <div
+                style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
+                <input type="checkbox" id="setupCheckSocial" style="width: 20px; height: 20px;">
+                <label for="setupCheckSocial" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
+                  <strong>Social Media OAuth</strong> - Connect your accounts
+                  <span style="color: #9ca3af; font-size: 14px; margin-left: 10px;">(Setup after opening app)</span>
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <div style="display: flex; gap: 15px;">
+            <button id="openSettingsFromWizard"
+              style="flex: 1; padding: 15px; background: var(--blue-gradient); color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px;">
+              ⚙️ Open Settings & Add Keys
+            </button>
+            <button id="continueWithoutSetup"
+              style="flex: 1; padding: 15px; background: #6b7280; color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px;">
+              Skip for Now
+            </button>
+          </div>
+
+          <p style="text-align: center; margin-top: 20px; font-size: 12px; color: #9ca3af;">
+            💡 Tip: You can access this wizard anytime from Settings → "Show Setup Guide"
+          </p>
+        </div>
+      </div>
 
       <!-- SECTION: LIBRARY -->
       <div id="section-library" class="content-section">
