fix(ui): Fix remaining dropdown dark mode issues and meme preview placeholder
- Add full-width-select class to analytics date range dropdown
- Add !important and general select rule for dark mode styling
- Create beautiful placeholder for empty meme preview with gradient background
- Wrap meme preview in container with centered icon and text
- Placeholder auto-hides when image loads

Fixes: Time period dropdown white in dark mode, template select blue in dark mode, empty preview appearance

--- a/index.html
+++ b/index.html
@@ -232,7 +232,13 @@
 
           <fieldset>
             <legend>Preview</legend>
-            <img id="memePreview" alt="Live Meme Preview" class="meme-preview-img" />
+            <div class="meme-preview-container">
+              <img id="memePreview" alt="Live Meme Preview" class="meme-preview-img" />
+              <div class="meme-preview-placeholder">
+                <span class="placeholder-icon">🎨</span>
+                <span class="placeholder-text">Select a template and add text<br>to preview your meme</span>
+              </div>
+            </div>
             <button type="button" id="saveMemeToLibrary" class="save-btn">
               💾 Save to Library
             </button>
@@ -1181,7 +1187,7 @@ Top Text 2|Bottom Text 2"></textarea>
           <!-- Date Range Filter -->
           <div class="analytics-controls">
             <label for="analyticsDateRange">Time Period:</label>
-            <select id="analyticsDateRange">
+            <select id="analyticsDateRange" class="full-width-select">
               <option value="7">Last 7 Days</option>
               <option value="30" selected>Last 30 Days</option>
               <option value="90">Last 90 Days</option>
