fix(ui): Update template dropdown placeholder text for clarity
Changed from "-- Choose a template --" to "-- Select a meme template --"
to make it clearer that this dropdown contains meme templates

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
           <label>Select Template
             <select id="templateSelect" class="full-width-select">
-              <option value="">-- Choose a template --</option>
+              <option value="">-- Select a meme template --</option>
             </select>
           </label>
 
