fix(ui): Update Generate section meme template dropdown placeholder
Changed from "🤖 AI Generator" to "-- Select a meme template --"
in the Generate tab (id=memeTemplate) to make it clearer for users

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <label>Template
               <input type="text" id="memeSearch" placeholder="Search templates..." style="margin-bottom: 5px" />
               <select id="memeTemplate">
-                <option value="ai-generator">🤖 AI Generator</option>
+                <option value="ai-generator">-- Select a meme template --</option>
               </select>
             </label>
           </div>
