security: Add anti-phishing and anti-keylogger protections
- Add OAuth URL verification dialog before opening auth windows
- Implement API key input masking with show/hide toggle
- Add clipboard auto-clear after pasting sensitive data (2s delay)
- Show security tips dialog on first run educating users about:
  * Phishing protection and URL verification
  * API key safety and official provider websites
  * Malware protection and antivirus importance
  * App's security model (local encryption, no tracking)
- Add navigation protection to prevent redirects to external sites
- Add window open handler to block unauthorized popups
- Disable Blink features to prevent middle-click attacks

These features help protect users from social engineering and keylogger threats
while maintaining full app functionality.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="styles.css" />
   <!-- Security utilities MUST load first -->
   <script src="utils/sanitize.js"></script>
+  <script src="utils/security-warnings.js"></script>
   <!-- Toast and keyboard shortcuts -->
   <script src="utils/toast.js"></script>
   <script src="utils/keyboard-shortcuts.js"></script>
@@ -1459,6 +1460,12 @@ Top Text 2|Bottom Text 2"></textarea>
   </div>
 
   <script src="renderer.js"></script>
+  <script>
+    // Initialize security features after page load
+    if (typeof initSecurityFeatures === 'function') {
+      initSecurityFeatures();
+    }
+  </script>
 </body>
 
 </html>
